--- a/style.css
+++ b/style.css
@@ -278,14 +278,112 @@ svg path {
 
 /*===== CONTEUDO ====*/
 
-.distritos {
-    padding: 3rem;
+.lista-tops{
+    width: 80%;
 }
 
-.distritos h1 {
-    font-size: 1.375rem;
-    font-weight: 500;
+.lista-tops h1{
+    margin-left: 4.2rem;
 }
+
+.territorios{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 2rem;
+    padding: 2rem;
+    margin-bottom: 10rem;
+}
+
+.top_1{
+    width: 17.5rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    flex-direction: column;
+    box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.15);
+    border-radius: 20px;
+}
+
+.top_1_img{
+    width: 100%;
+}
+
+.top_1 img{
+    width: 100%;
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
+}
+
+.top_1_text{
+    width: 100%;
+    height: 30vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    gap: 0.75rem;
+    background-color: #fff;
+    border-bottom-left-radius: 20px;
+    border-bottom-right-radius: 20px;
+    padding: 1rem;
+}
+
+.top_1_text h1 {
+    color: #002e5b;
+}
+
+.top_1_text p {
+    color: #666d72;;
+}
+
+.territorios .bn632-hover {
+    width: 10rem;
+    font-size: 1.40rem;
+    font-weight: 600;
+    color: #fff;
+    cursor: pointer;
+    margin-top: 1.25rem;
+    height: 7vh;
+    text-align:center;
+    border: none;
+    background-size: 300% 100%;
+    border-radius: 0.3125rem;
+    moz-transition: all .4s ease-in-out;
+    -o-transition: all .4s ease-in-out;
+    -webkit-transition: all .4s ease-in-out;
+    transition: all .4s ease-in-out;
+    font-weight: 300;
+    margin-bottom: 2rem;
+  }
+
+.territorios  .bn632-hover:hover {
+    background-position: 100% 0;
+    moz-transition: all .4s ease-in-out;
+    -o-transition: all .4s ease-in-out;
+    -webkit-transition: all .4s ease-in-out;
+    transition: all .4s ease-in-out;
+  }
+  
+.territorios  .bn632-hover:focus {
+    outline: none;
+  }
+  
+.territorios  .bn632-hover.bn18 {
+    background-image: linear-gradient(
+      to right,
+      #2874fc,
+      #5496ec,
+      #1b61e2,
+      #502bb6
+    );
+    box-shadow: 0 4px 15px 0 rgba(49, 196, 190, 0.75);
+  }
+
 
 /*====FOOTER====*/
 
@@ -595,10 +693,6 @@ footer{
 
     .form-msg{
         width: 90%;
-    }
-    
-    .copy{
-        font-size: 0.5rem;
     }
 }
 
