--- a/style.css
+++ b/style.css
@@ -706,6 +706,10 @@ footer{
     .form-msg{
         width: 90%;
     }
+    
+    .copy{
+        font-size: 0.5rem;
+    }
 }
 
 @media (max-width: 370px){
