--- a/style.css
+++ b/style.css
@@ -597,6 +597,10 @@ footer{
 @media (max-width: 1025px){
     .form-msg{
         width: 50%;
+        height: 60vh;
+        display: flex;
+        align-items: center;
+        justify-content: center;
     }
 
     .img-left{
@@ -632,8 +636,8 @@ footer{
     }
     
     .form-msg{
-        width: 55%;
-        height: 50vh;
+        width: 75%;
+        height: 60vh;
     }
 }
 
