--- a/style.css
+++ b/style.css
@@ -597,10 +597,6 @@ footer{
 @media (max-width: 1025px){
     .form-msg{
         width: 50%;
-        height: 100vh;
-        display: flex;
-        align-items: center;
-        justify-content: center;
     }
 
     .img-left{
@@ -636,8 +632,11 @@ footer{
     }
     
     .form-msg{
-        width: 100%;
-        height: 100vh;
+        width: 55%;
+    }
+    
+    .form-msg h1{
+        font-size: 0.75rem;
     }
 }
 
